[project]
name = "ravexclient"
version = "0.1.0"
description = "Base HTTP client for building async API clients with proxy support, error handling, and extensible architecture"
readme = "README.md"
authors = [{ name = "christianfm10", email = "christianmfm10@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1"]
keywords = ["http", "client", "api", "async", "httpx", "proxy", "base-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/christianfm10/ravexclient"
Documentation = "https://github.com/christianfm10/ravexclient#readme"
Repository = "https://github.com/christianfm10/ravexclient"
Issues = "https://github.com/christianfm10/ravexclient/issues"

[project.scripts]
ravexclient = "ravexclient:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0"]

[tool.coverage.run]
omit = ["tests/*", "examples/*"]
